--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,12 @@
   --darker-blue: #3b82f6;
 }
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -48,6 +54,7 @@ main {
   width: 90%;
   text-align: center;
   background: white;
+  color: var(--blue);
   padding: 15px;
   text-decoration: none;
   margin: auto;
@@ -98,4 +105,54 @@ main {
 
 .info p:last-child {
   font-weight: bold;
+}
+
+/* Form */
+form {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+form input[type='text'] {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  margin-top: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+form textarea {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  margin-top: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+form button {
+  width: 40%;
+  margin: auto;
+  margin-top: 30px;
+  padding: 15px;
+  font-size: 1.1rem;
+  color: white;
+  background: var(--blue);
+  border: 1px transparent;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+form button:hover,
+form button:focus {
+  background: var(--darker-blue);
+}
+
+.form-card {
+  padding: 10px;
+  border: 1px solid #d1d5db;
+  border-radius: 25px;
+  background: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
